[gd_scene load_steps=8 format=3 uid="uid://min5voomqxi6"]

[ext_resource type="FontFile" uid="uid://bygp8r16f484q" path="res://assets/fonts/tinypixel/tinypixel.otf" id="1_d6f0g"]
[ext_resource type="Script" path="res://UI/Level/PopUp/end_level_pop_up.gd" id="1_q1v3k"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rty2g"]
bg_color = Color(0.113725, 0.470588, 0.6, 1)

[sub_resource type="LabelSettings" id="LabelSettings_eupm6"]
font = ExtResource("1_d6f0g")
font_size = 32
font_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_5c5gq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(376, -400)]
}

[sub_resource type="Animation" id="Animation_tgfgu"]
resource_name = "popup"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("Control:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, -2),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(1, 1, 1, 0.258824)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(376, -400), Vector2(376, 124)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_eyeiv"]
_data = {
"RESET": SubResource("Animation_5c5gq"),
"popup": SubResource("Animation_tgfgu")
}

[node name="EndLevelPopUp" type="CanvasLayer"]
layer = 5
visible = false
script = ExtResource("1_q1v3k")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(400, 400)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -724.0
offset_right = 200.0
offset_bottom = -324.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(200, 200)

[node name="PanelContainer" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rty2g")

[node name="MarginContainer" type="MarginContainer" parent="Control/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_top = 50
theme_override_constants/margin_bottom = 50

[node name="CompletedLabel" type="Label" parent="Control/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Nível completo"
label_settings = SubResource("LabelSettings_eupm6")

[node name="BottomButtons" type="HBoxContainer" parent="Control/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 20
alignment = 1

[node name="BackButton" type="Button" parent="Control/PanelContainer/MarginContainer/BottomButtons"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Voltar"

[node name="NextLevel" type="Button" parent="Control/PanelContainer/MarginContainer/BottomButtons"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Próximo nível"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_eyeiv")
}

[connection signal="pressed" from="Control/PanelContainer/MarginContainer/BottomButtons/BackButton" to="." method="_on_popup_hide"]
[connection signal="pressed" from="Control/PanelContainer/MarginContainer/BottomButtons/NextLevel" to="." method="_on_next_level_pressed"]
